@@ -1,3 +1,7 @@
+Wed Feb 29 14:09:18 CET 2012 (acab)
+-----------------------------------
+ * libclamav/pdf.c: scan the whole trailer for /H (bb#4315)
+
 Tue Feb  7 23:23:48 CET 2012 (tk)
 ---------------------------------
  * libclamav: fix bytecode whitelisting
